user method refactoring
